logs/physpetree.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PhySpeTree-0.2.9.egg-info'...
Listing './lib/python3.5/site-packages/physpetool'...
Listing './lib/python3.5/site-packages/physpetool/convert'...
Listing './lib/python3.5/site-packages/physpetool/database'...
Listing './lib/python3.5/site-packages/physpetool/phylotree'...
Compiling './lib/python3.5/site-packages/physpetool/phylotree/retrieveprotein.py'...
***   File "./lib/python3.5/site-packages/physpetool/phylotree/retrieveprotein.py", line 153
    print getcolname()
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/physpetool/physpe'...
Listing './lib/python3.5/site-packages/physpetool/softwares'...
Listing './lib/python3.5/site-packages/physpetool/tools'...
Compiling './lib/python3.5/site-packages/physpetool/tools/createproindex.py'...
***   File "./lib/python3.5/site-packages/physpetool/tools/createproindex.py", line 34
    print row
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/physpetool/tools/dealwithSILVAdata.py'...
***   File "./lib/python3.5/site-packages/physpetool/tools/dealwithSILVAdata.py", line 62
    print nid1
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/physpetool/tools/insertproindex.py'...
***   File "./lib/python3.5/site-packages/physpetool/tools/insertproindex.py", line 97
    print ko
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/physpetool/tools/operateDB.py'...
***   File "./lib/python3.5/site-packages/physpetool/tools/operateDB.py", line 41
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/physpetool/tools/protein31kodb.py'...
***   File "./lib/python3.5/site-packages/physpetool/tools/protein31kodb.py", line 31
    print os.getcwd()
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/physpetool/utils'...
Compiling './lib/python3.5/site-packages/physpetool/utils/outdirforamt.py'...
***   File "./lib/python3.5/site-packages/physpetool/utils/outdirforamt.py", line 46
    print type(str(doclu_subdir))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/physpetool/view'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
